{
  "version": 4,
  "terraform_version": "1.11.4",
  "serial": 9,
  "lineage": "4102eca7-e67e-eba9-7357-036bc7dc1238",
  "resources": [
    {
      "module": "module.compute[0]",
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "accelerated_networking_enabled": false,
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/b96270e2-9178-42ca-91c1-85b59fd3be55/resourceGroups/nginx-app-dev-rg/providers/Microsoft.Network/networkInterfaces/dev-vm-nic-1",
            "internal_domain_name_suffix": "yut2scdxcraupmpqr3oweha2rf.bx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.0.2.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/b96270e2-9178-42ca-91c1-85b59fd3be55/resourceGroups/nginx-app-dev-rg/providers/Microsoft.Network/virtualNetworks/dev-vnet/subnets/dev-private-subnet"
              }
            ],
            "ip_forwarding_enabled": false,
            "location": "eastus",
            "mac_address": "60-45-BD-ED-FE-57",
            "name": "dev-vm-nic-1",
            "private_ip_address": "10.0.2.4",
            "private_ip_addresses": [
              "10.0.2.4"
            ],
            "resource_group_name": "nginx-app-dev-rg",
            "tags": {
              "Environment": "dev",
              "ManagedBy": "Terraform"
            },
            "virtual_machine_id": "/subscriptions/b96270e2-9178-42ca-91c1-85b59fd3be55/resourceGroups/nginx-app-dev-rg/providers/Microsoft.Compute/virtualMachines/dev-vm-1"
          },
          "dependencies": [
            "azurerm_resource_group.main",
            "module.networking.azurerm_nat_gateway.main",
            "module.networking.azurerm_nat_gateway_public_ip_association.main",
            "module.networking.azurerm_network_security_group.main",
            "module.networking.azurerm_public_ip.nat",
            "module.networking.azurerm_subnet.private",
            "module.networking.azurerm_subnet.public",
            "module.networking.azurerm_subnet_nat_gateway_association.main",
            "module.networking.azurerm_subnet_network_security_group_association.private",
            "module.networking.azurerm_virtual_network.main"
          ]
        }
      ]
    },
    {
      "module": "module.loadbalancer[0]",
      "mode": "managed",
      "type": "azurerm_application_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "authentication_certificate": [],
            "autoscale_configuration": [],
            "backend_address_pool": [
              {
                "fqdns": [],
                "id": "/subscriptions/b96270e2-9178-42ca-91c1-85b59fd3be55/resourceGroups/nginx-app-dev-rg/providers/Microsoft.Network/applicationGateways/dev-appgw/backendAddressPools/nginx-backend-pool",
                "ip_addresses": [
                  "10.0.2.4"
                ],
                "name": "nginx-backend-pool"
              }
            ],
            "backend_http_settings": [
              {
                "affinity_cookie_name": "",
                "authentication_certificate": [],
                "connection_draining": [],
                "cookie_based_affinity": "Disabled",
                "host_name": "",
                "id": "/subscriptions/b96270e2-9178-42ca-91c1-85b59fd3be55/resourceGroups/nginx-app-dev-rg/providers/Microsoft.Network/applicationGateways/dev-appgw/backendHttpSettingsCollection/https-backend-settings",
                "name": "https-backend-settings",
                "path": "",
                "pick_host_name_from_backend_address": false,
                "port": 443,
                "probe_id": "/subscriptions/b96270e2-9178-42ca-91c1-85b59fd3be55/resourceGroups/nginx-app-dev-rg/providers/Microsoft.Network/applicationGateways/dev-appgw/probes/https-health-probe",
                "probe_name": "https-health-probe",
                "protocol": "Https",
                "request_timeout": 60,
                "trusted_root_certificate_names": []
              }
            ],
            "custom_error_configuration": [],
            "enable_http2": false,
            "fips_enabled": false,
            "firewall_policy_id": "",
            "force_firewall_policy_association": false,
            "frontend_ip_configuration": [
              {
                "id": "/subscriptions/b96270e2-9178-42ca-91c1-85b59fd3be55/resourceGroups/nginx-app-dev-rg/providers/Microsoft.Network/applicationGateways/dev-appgw/frontendIPConfigurations/appgw-frontend-ip",
                "name": "appgw-frontend-ip",
                "private_ip_address": "",
                "private_ip_address_allocation": "Dynamic",
                "private_link_configuration_id": "",
                "private_link_configuration_name": "",
                "public_ip_address_id": "/subscriptions/b96270e2-9178-42ca-91c1-85b59fd3be55/resourceGroups/nginx-app-dev-rg/providers/Microsoft.Network/publicIPAddresses/dev-appgw-pip",
                "subnet_id": ""
              }
            ],
            "frontend_port": [
              {
                "id": "/subscriptions/b96270e2-9178-42ca-91c1-85b59fd3be55/resourceGroups/nginx-app-dev-rg/providers/Microsoft.Network/applicationGateways/dev-appgw/frontendPorts/http-port",
                "name": "http-port",
                "port": 80
              },
              {
                "id": "/subscriptions/b96270e2-9178-42ca-91c1-85b59fd3be55/resourceGroups/nginx-app-dev-rg/providers/Microsoft.Network/applicationGateways/dev-appgw/frontendPorts/https-port",
                "name": "https-port",
                "port": 443
              }
            ],
            "gateway_ip_configuration": [
              {
                "id": "/subscriptions/b96270e2-9178-42ca-91c1-85b59fd3be55/resourceGroups/nginx-app-dev-rg/providers/Microsoft.Network/applicationGateways/dev-appgw/gatewayIPConfigurations/appgw-ip-config",
                "name": "appgw-ip-config",
                "subnet_id": "/subscriptions/b96270e2-9178-42ca-91c1-85b59fd3be55/resourceGroups/nginx-app-dev-rg/providers/Microsoft.Network/virtualNetworks/dev-vnet/subnets/dev-public-subnet"
              }
            ],
            "global": [],
            "http_listener": [
              {
                "custom_error_configuration": [],
                "firewall_policy_id": "",
                "frontend_ip_configuration_id": "/subscriptions/b96270e2-9178-42ca-91c1-85b59fd3be55/resourceGroups/nginx-app-dev-rg/providers/Microsoft.Network/applicationGateways/dev-appgw/frontendIPConfigurations/appgw-frontend-ip",
                "frontend_ip_configuration_name": "appgw-frontend-ip",
                "frontend_port_id": "/subscriptions/b96270e2-9178-42ca-91c1-85b59fd3be55/resourceGroups/nginx-app-dev-rg/providers/Microsoft.Network/applicationGateways/dev-appgw/frontendPorts/http-port",
                "frontend_port_name": "http-port",
                "host_name": "",
                "host_names": [],
                "id": "/subscriptions/b96270e2-9178-42ca-91c1-85b59fd3be55/resourceGroups/nginx-app-dev-rg/providers/Microsoft.Network/applicationGateways/dev-appgw/httpListeners/http-listener",
                "name": "http-listener",
                "protocol": "Http",
                "require_sni": false,
                "ssl_certificate_id": "",
                "ssl_certificate_name": "",
                "ssl_profile_id": "",
                "ssl_profile_name": ""
              },
              {
                "custom_error_configuration": [],
                "firewall_policy_id": "",
                "frontend_ip_configuration_id": "/subscriptions/b96270e2-9178-42ca-91c1-85b59fd3be55/resourceGroups/nginx-app-dev-rg/providers/Microsoft.Network/applicationGateways/dev-appgw/frontendIPConfigurations/appgw-frontend-ip",
                "frontend_ip_configuration_name": "appgw-frontend-ip",
                "frontend_port_id": "/subscriptions/b96270e2-9178-42ca-91c1-85b59fd3be55/resourceGroups/nginx-app-dev-rg/providers/Microsoft.Network/applicationGateways/dev-appgw/frontendPorts/https-port",
                "frontend_port_name": "https-port",
                "host_name": "",
                "host_names": [],
                "id": "/subscriptions/b96270e2-9178-42ca-91c1-85b59fd3be55/resourceGroups/nginx-app-dev-rg/providers/Microsoft.Network/applicationGateways/dev-appgw/httpListeners/https-listener",
                "name": "https-listener",
                "protocol": "Https",
                "require_sni": false,
                "ssl_certificate_id": "/subscriptions/b96270e2-9178-42ca-91c1-85b59fd3be55/resourceGroups/nginx-app-dev-rg/providers/Microsoft.Network/applicationGateways/dev-appgw/sslCertificates/dev-ssl-cert",
                "ssl_certificate_name": "dev-ssl-cert",
                "ssl_profile_id": "",
                "ssl_profile_name": ""
              }
            ],
            "id": "/subscriptions/b96270e2-9178-42ca-91c1-85b59fd3be55/resourceGroups/nginx-app-dev-rg/providers/Microsoft.Network/applicationGateways/dev-appgw",
            "identity": [],
            "location": "eastus",
            "name": "dev-appgw",
            "private_endpoint_connection": [],
            "private_link_configuration": [],
            "probe": [
              {
                "host": "127.0.0.1",
                "id": "/subscriptions/b96270e2-9178-42ca-91c1-85b59fd3be55/resourceGroups/nginx-app-dev-rg/providers/Microsoft.Network/applicationGateways/dev-appgw/probes/https-health-probe",
                "interval": 30,
                "match": [
                  {
                    "body": "",
                    "status_code": [
                      "200-399"
                    ]
                  }
                ],
                "minimum_servers": 0,
                "name": "https-health-probe",
                "path": "/health",
                "pick_host_name_from_backend_http_settings": false,
                "port": 0,
                "protocol": "Https",
                "timeout": 30,
                "unhealthy_threshold": 3
              }
            ],
            "redirect_configuration": [
              {
                "id": "/subscriptions/b96270e2-9178-42ca-91c1-85b59fd3be55/resourceGroups/nginx-app-dev-rg/providers/Microsoft.Network/applicationGateways/dev-appgw/redirectConfigurations/http-to-https-redirect",
                "include_path": true,
                "include_query_string": true,
                "name": "http-to-https-redirect",
                "redirect_type": "Permanent",
                "target_listener_id": "/subscriptions/b96270e2-9178-42ca-91c1-85b59fd3be55/resourceGroups/nginx-app-dev-rg/providers/Microsoft.Network/applicationGateways/dev-appgw/httpListeners/https-listener",
                "target_listener_name": "https-listener",
                "target_url": ""
              }
            ],
            "request_routing_rule": [
              {
                "backend_address_pool_id": "",
                "backend_address_pool_name": "",
                "backend_http_settings_id": "",
                "backend_http_settings_name": "",
                "http_listener_id": "/subscriptions/b96270e2-9178-42ca-91c1-85b59fd3be55/resourceGroups/nginx-app-dev-rg/providers/Microsoft.Network/applicationGateways/dev-appgw/httpListeners/http-listener",
                "http_listener_name": "http-listener",
                "id": "/subscriptions/b96270e2-9178-42ca-91c1-85b59fd3be55/resourceGroups/nginx-app-dev-rg/providers/Microsoft.Network/applicationGateways/dev-appgw/requestRoutingRules/http-redirect-rule",
                "name": "http-redirect-rule",
                "priority": 200,
                "redirect_configuration_id": "/subscriptions/b96270e2-9178-42ca-91c1-85b59fd3be55/resourceGroups/nginx-app-dev-rg/providers/Microsoft.Network/applicationGateways/dev-appgw/redirectConfigurations/http-to-https-redirect",
                "redirect_configuration_name": "http-to-https-redirect",
                "rewrite_rule_set_id": "",
                "rewrite_rule_set_name": "",
                "rule_type": "Basic",
                "url_path_map_id": "",
                "url_path_map_name": ""
              },
              {
                "backend_address_pool_id": "/subscriptions/b96270e2-9178-42ca-91c1-85b59fd3be55/resourceGroups/nginx-app-dev-rg/providers/Microsoft.Network/applicationGateways/dev-appgw/backendAddressPools/nginx-backend-pool",
                "backend_address_pool_name": "nginx-backend-pool",
                "backend_http_settings_id": "/subscriptions/b96270e2-9178-42ca-91c1-85b59fd3be55/resourceGroups/nginx-app-dev-rg/providers/Microsoft.Network/applicationGateways/dev-appgw/backendHttpSettingsCollection/https-backend-settings",
                "backend_http_settings_name": "https-backend-settings",
                "http_listener_id": "/subscriptions/b96270e2-9178-42ca-91c1-85b59fd3be55/resourceGroups/nginx-app-dev-rg/providers/Microsoft.Network/applicationGateways/dev-appgw/httpListeners/https-listener",
                "http_listener_name": "https-listener",
                "id": "/subscriptions/b96270e2-9178-42ca-91c1-85b59fd3be55/resourceGroups/nginx-app-dev-rg/providers/Microsoft.Network/applicationGateways/dev-appgw/requestRoutingRules/https-routing-rule",
                "name": "https-routing-rule",
                "priority": 100,
                "redirect_configuration_id": "",
                "redirect_configuration_name": "",
                "rewrite_rule_set_id": "",
                "rewrite_rule_set_name": "",
                "rule_type": "Basic",
                "url_path_map_id": "",
                "url_path_map_name": ""
              }
            ],
            "resource_group_name": "nginx-app-dev-rg",
            "rewrite_rule_set": [],
            "sku": [
              {
                "capacity": 2,
                "name": "Standard_v2",
                "tier": "Standard_v2"
              }
            ],
            "ssl_certificate": [
              {
                "data": "MIIKDwIBAzCCCcUGCSqGSIb3DQEHAaCCCbYEggmyMIIJrjCCBCIGCSqGSIb3DQEHBqCCBBMwggQPAgEAMIIECAYJKoZIhvcNAQcBMFcGCSqGSIb3DQEFDTBKMCkGCSqGSIb3DQEFDDAcBAhu56THCZjvHgICCAAwDAYIKoZIhvcNAgkFADAdBglghkgBZQMEASoEEGQIQvnrtrhTCi68yiwrBjiAggOgiNLv5EBiWZXmQm+Cd4GwZEfG8qUwKfasU7KmHHi1WNWRDN/NLUd9xEZPtIwFEeV5Ko1m9rhFhNksfxoX4ZdZ1BYxVKq762R+5VDUpZ3VpaB742BM6ATSGqpEfpqLTwKy82UG5D3X/pWRDrwNJ0bPjHRfLl2YGARDgyvpbSnlD/i1huRW9b9Umzyjn0ZX4cqYT/kDXmLLsMTcNWrIDLbAb/H/zIcACD41EVXjzgCihZV+ZRxxOE9VCBPs1oA [...]
                "id": "/subscriptions/b96270e2-9178-42ca-91c1-85b59fd3be55/resourceGroups/nginx-app-dev-rg/providers/Microsoft.Network/applicationGateways/dev-appgw/sslCertificates/dev-ssl-cert",
                "key_vault_secret_id": "",
                "name": "dev-ssl-cert",
                "password": "P@ssw0rd123",
                "public_cert_data": "MIIDbAYJKoZIhvcNAQcCoIIDXTCCA1kCAQExADALBgkqhkiG9w0BBwGgggNBMIIDPTCCAiUCFA7BfFOfERzFRj2hxBrG+cWYeXsgMA0GCSqGSIb3DQEBCwUAMFsxCzAJBgNVBAYTAlVTMQ4wDAYDVQQIDAVTdGF0ZTENMAsGA1UEBwwEQ2l0eTEVMBMGA1UECgwMT3JnYW5pemF0aW9uMRYwFAYDVQQDDA0qLmV4YW1wbGUuY29tMB4XDTI1MTAwNzE1NDUzMFoXDTI2MTAwNzE1NDUzMFowWzELMAkGA1UEBhMCVVMxDjAMBgNVBAgMBVN0YXRlMQ0wCwYDVQQHDARDaXR5MRUwEwYDVQQKDAxPcmdhbml6YXRpb24xFjAUBgNVBAMMDSouZXhhbXBsZS5jb20wggEiMA0GCSqGSIb3DQEBAQUAA4IBDwAwggEKAoIBAQCNJrmjL2p [...]
              }
            ],
            "ssl_policy": [
              {
                "cipher_suites": [],
                "disabled_protocols": [],
                "min_protocol_version": "",
                "policy_name": "AppGwSslPolicy20220101S",
                "policy_type": "Predefined"
              }
            ],
            "ssl_profile": [],
            "tags": {
              "Environment": "dev",
              "ManagedBy": "Terraform"
            },
            "timeouts": null,
            "trusted_client_certificate": [],
            "trusted_root_certificate": [],
            "url_path_map": [],
            "waf_configuration": [],
            "zones": []
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "ssl_certificate"
              }
            ]
          ],
          "dependencies": [
            "azurerm_resource_group.main",
            "module.compute.azurerm_linux_virtual_machine.main",
            "module.compute.azurerm_network_interface.main",
            "module.loadbalancer.azurerm_public_ip.appgw",
            "module.loadbalancer.random_string.dns_suffix",
            "module.networking.azurerm_nat_gateway.main",
            "module.networking.azurerm_nat_gateway_public_ip_association.main",
            "module.networking.azurerm_network_security_group.main",
            "module.networking.azurerm_public_ip.nat",
            "module.networking.azurerm_subnet.private",
            "module.networking.azurerm_subnet.public",
            "module.networking.azurerm_subnet_nat_gateway_association.main",
            "module.networking.azurerm_subnet_network_security_group_association.private",
            "module.networking.azurerm_virtual_network.main"
          ]
        }
      ]
    },
    {
      "module": "module.loadbalancer[0]",
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "appgw",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "domain_name_label": "dev-nginx-t4n16qx7",
            "fqdn": "dev-nginx-t4n16qx7.eastus.cloudapp.azure.com",
            "id": "/subscriptions/b96270e2-9178-42ca-91c1-85b59fd3be55/resourceGroups/nginx-app-dev-rg/providers/Microsoft.Network/publicIPAddresses/dev-appgw-pip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "172.191.128.89",
            "ip_version": "IPv4",
            "location": "eastus",
            "name": "dev-appgw-pip",
            "resource_group_name": "nginx-app-dev-rg",
            "sku": "Standard",
            "sku_tier": "Regional",
            "tags": {
              "Environment": "dev",
              "ManagedBy": "Terraform"
            }
          },
          "dependencies": [
            "azurerm_resource_group.main",
            "module.compute.azurerm_linux_virtual_machine.main",
            "module.compute.azurerm_network_interface.main",
            "module.loadbalancer.random_string.dns_suffix",
            "module.networking.azurerm_nat_gateway.main",
            "module.networking.azurerm_nat_gateway_public_ip_association.main",
            "module.networking.azurerm_network_security_group.main",
            "module.networking.azurerm_public_ip.nat",
            "module.networking.azurerm_subnet.private",
            "module.networking.azurerm_subnet.public",
            "module.networking.azurerm_subnet_nat_gateway_association.main",
            "module.networking.azurerm_subnet_network_security_group_association.private",
            "module.networking.azurerm_virtual_network.main"
          ]
        }
      ]
    },
    {
      "module": "module.networking[0]",
      "mode": "managed",
      "type": "azurerm_nat_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/b96270e2-9178-42ca-91c1-85b59fd3be55/resourceGroups/nginx-app-dev-rg/providers/Microsoft.Network/natGateways/dev-nat-gateway",
            "idle_timeout_in_minutes": 4,
            "location": "eastus",
            "name": "dev-nat-gateway",
            "resource_group_name": "nginx-app-dev-rg",
            "resource_guid": "f2a0ff36-3b93-4acb-94cc-917a3eea8e99",
            "sku_name": "Standard",
            "tags": {
              "Environment": "dev",
              "ManagedBy": "Terraform"
            }
          },
          "dependencies": [
            "azurerm_resource_group.main"
          ]
        }
      ]
    },
    {
      "module": "module.networking[0]",
      "mode": "managed",
      "type": "azurerm_nat_gateway_public_ip_association",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/b96270e2-9178-42ca-91c1-85b59fd3be55/resourceGroups/nginx-app-dev-rg/providers/Microsoft.Network/natGateways/dev-nat-gateway|/subscriptions/b96270e2-9178-42ca-91c1-85b59fd3be55/resourceGroups/nginx-app-dev-rg/providers/Microsoft.Network/publicIPAddresses/dev-nat-pip",
            "nat_gateway_id": "/subscriptions/b96270e2-9178-42ca-91c1-85b59fd3be55/resourceGroups/nginx-app-dev-rg/providers/Microsoft.Network/natGateways/dev-nat-gateway",
            "public_ip_address_id": "/subscriptions/b96270e2-9178-42ca-91c1-85b59fd3be55/resourceGroups/nginx-app-dev-rg/providers/Microsoft.Network/publicIPAddresses/dev-nat-pip"
          },
          "dependencies": [
            "azurerm_resource_group.main",
            "module.networking.azurerm_nat_gateway.main",
            "module.networking.azurerm_public_ip.nat"
          ]
        }
      ]
    },
    {
      "module": "module.networking[0]",
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/b96270e2-9178-42ca-91c1-85b59fd3be55/resourceGroups/nginx-app-dev-rg/providers/Microsoft.Network/networkSecurityGroups/dev-nsg",
            "location": "eastus",
            "name": "dev-nsg",
            "resource_group_name": "nginx-app-dev-rg",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "Allow-SSH",
                "priority": 1001,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "443",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "Allow-HTTPS",
                "priority": 1003,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "80",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "Allow-HTTP",
                "priority": 1002,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {
              "Environment": "dev",
              "ManagedBy": "Terraform"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.main"
          ]
        }
      ]
    },
    {
      "module": "module.networking[0]",
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/b96270e2-9178-42ca-91c1-85b59fd3be55/resourceGroups/nginx-app-dev-rg/providers/Microsoft.Network/publicIPAddresses/dev-nat-pip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "172.173.147.150",
            "ip_version": "IPv4",
            "location": "eastus",
            "name": "dev-nat-pip",
            "resource_group_name": "nginx-app-dev-rg",
            "sku": "Standard",
            "sku_tier": "Regional",
            "tags": {
              "Environment": "dev",
              "ManagedBy": "Terraform"
            }
          },
          "dependencies": [
            "azurerm_resource_group.main"
          ]
        }
      ]
    },
    {
      "module": "module.networking[0]",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.2.0/24"
            ],
            "default_outbound_access_enabled": true,
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/b96270e2-9178-42ca-91c1-85b59fd3be55/resourceGroups/nginx-app-dev-rg/providers/Microsoft.Network/virtualNetworks/dev-vnet/subnets/dev-private-subnet",
            "name": "dev-private-subnet",
            "private_endpoint_network_policies": "Enabled",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "nginx-app-dev-rg",
            "virtual_network_name": "dev-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.main",
            "module.networking.azurerm_virtual_network.main"
          ]
        }
      ]
    },
    {
      "module": "module.networking[0]",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.1.0/24"
            ],
            "default_outbound_access_enabled": true,
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/b96270e2-9178-42ca-91c1-85b59fd3be55/resourceGroups/nginx-app-dev-rg/providers/Microsoft.Network/virtualNetworks/dev-vnet/subnets/dev-public-subnet",
            "name": "dev-public-subnet",
            "private_endpoint_network_policies": "Enabled",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "nginx-app-dev-rg",
            "virtual_network_name": "dev-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.main",
            "module.networking.azurerm_virtual_network.main"
          ]
        }
      ]
    },
    {
      "module": "module.networking[0]",
      "mode": "managed",
      "type": "azurerm_subnet_nat_gateway_association",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/b96270e2-9178-42ca-91c1-85b59fd3be55/resourceGroups/nginx-app-dev-rg/providers/Microsoft.Network/virtualNetworks/dev-vnet/subnets/dev-private-subnet",
            "nat_gateway_id": "/subscriptions/b96270e2-9178-42ca-91c1-85b59fd3be55/resourceGroups/nginx-app-dev-rg/providers/Microsoft.Network/natGateways/dev-nat-gateway",
            "subnet_id": "/subscriptions/b96270e2-9178-42ca-91c1-85b59fd3be55/resourceGroups/nginx-app-dev-rg/providers/Microsoft.Network/virtualNetworks/dev-vnet/subnets/dev-private-subnet"
          },
          "dependencies": [
            "azurerm_resource_group.main",
            "module.networking.azurerm_nat_gateway.main",
            "module.networking.azurerm_subnet.private",
            "module.networking.azurerm_virtual_network.main"
          ]
        }
      ]
    },
    {
      "module": "module.networking[0]",
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/b96270e2-9178-42ca-91c1-85b59fd3be55/resourceGroups/nginx-app-dev-rg/providers/Microsoft.Network/virtualNetworks/dev-vnet/subnets/dev-private-subnet",
            "network_security_group_id": "/subscriptions/b96270e2-9178-42ca-91c1-85b59fd3be55/resourceGroups/nginx-app-dev-rg/providers/Microsoft.Network/networkSecurityGroups/dev-nsg",
            "subnet_id": "/subscriptions/b96270e2-9178-42ca-91c1-85b59fd3be55/resourceGroups/nginx-app-dev-rg/providers/Microsoft.Network/virtualNetworks/dev-vnet/subnets/dev-private-subnet"
          },
          "dependencies": [
            "azurerm_resource_group.main",
            "module.networking.azurerm_network_security_group.main",
            "module.networking.azurerm_subnet.private",
            "module.networking.azurerm_virtual_network.main"
          ]
        }
      ]
    },
    {
      "module": "module.networking[0]",
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "08c927c5-1477-4741-b1f0-8f5d621c1c8d",
            "id": "/subscriptions/b96270e2-9178-42ca-91c1-85b59fd3be55/resourceGroups/nginx-app-dev-rg/providers/Microsoft.Network/virtualNetworks/dev-vnet",
            "location": "eastus",
            "name": "dev-vnet",
            "resource_group_name": "nginx-app-dev-rg",
            "subnet": [
              {
                "address_prefix": "10.0.1.0/24",
                "id": "/subscriptions/b96270e2-9178-42ca-91c1-85b59fd3be55/resourceGroups/nginx-app-dev-rg/providers/Microsoft.Network/virtualNetworks/dev-vnet/subnets/dev-public-subnet",
                "name": "dev-public-subnet"
              },
              {
                "address_prefix": "10.0.2.0/24",
                "id": "/subscriptions/b96270e2-9178-42ca-91c1-85b59fd3be55/resourceGroups/nginx-app-dev-rg/providers/Microsoft.Network/virtualNetworks/dev-vnet/subnets/dev-private-subnet",
                "name": "dev-private-subnet",
                "security_group": "/subscriptions/b96270e2-9178-42ca-91c1-85b59fd3be55/resourceGroups/nginx-app-dev-rg/providers/Microsoft.Network/networkSecurityGroups/dev-nsg"
              }
            ],
            "tags": {
              "Environment": "dev",
              "ManagedBy": "Terraform"
            }
          },
          "dependencies": [
            "azurerm_resource_group.main"
          ]
        }
      ]
    }
  ]
}